Test new version of csviri